tests/baselines/reference/parserErrorRecovery_Block2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_Block2.ts (1 errors) ====
    function f() {
        |
        ~
!!! parserErrorRecovery_Block2.ts(2,5): error TS1008: Unexpected token; 'statement' expected.
        return;
    }